kubernetes/ray-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ray-dashboard
spec:
  selector:
    app: ray-dashboard
  ports:
    - protocol: TCP
      port: 8265
      targetPort: 8265
